Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • mutter mutter
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,151
    • Issues 1,151
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 120
    • Merge requests 120
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • muttermutter
  • Issues
  • #1468
Closed
Open
Issue created Oct 11, 2020 by Filip Gospodinov@toxeus

mutter 3.38.1 breaks xhost

Affected version

  • mutter 3.38.1, probably also mutter 3.38.0
  • issue appears only on Wayland; XOrg works fine

Bug summary

Many Gnome on Wayland users rely on xhost for running GUI applications that require root privileges, e.g. GParted. This is probably the main but not only use case. According to this email thread this commit !1424 (merged) caused the regression.

I'm not aware of an alternative xhost-like tool for Wayland and therefore consider this to be a bug because it breaks workflows that have been working properly before.

Steps to reproduce

xhost +si:localuser:$USER
su - $USER
gparted

What happened

Unable to init server: Could not connect: Connection refused

Error: cannot open display: :0

What did you expect to happen

GParted to be successfully started.

Assignee
Assign to
Time tracking